Changes to display the list of collection and deck

--- a/DeckBuilderPro/Views/Collections/ListCollection.cshtml
+++ b/DeckBuilderPro/Views/Collections/ListCollection.cshtml
@@ -7,13 +7,15 @@
 <fieldset>
     <legend>DeckViewModel</legend>
     @foreach (var deckCard in Model.CardsInCollection.OrderBy(m => m.Card.CardType.Name).ThenBy(m => m.Card.Name))
-    { 
+    {
         if (lastCardType != deckCard.Card.CardType.Name)
         {
-            @Html.Raw("<hr />" + deckCard.Card.CardType.Name + "<hr />");
-            lastCardType = deckCard.Card.CardType.Name;
+            var count = Model.CardsInCollection.Where(c => c.Card.CardType.Name == deckCard.Card.CardType.Name).Sum(c => c.CardCount);
+            @Html.Raw("<hr /><h4>" + deckCard.Card.CardType.Name + "<div class='pull-right'>" + count + "</div></h6>" + "<hr />");
+                                                                                                                                 lastCardType = deckCard.Card.CardType.Name;
         }
-        
+
+
         @Html.Partial("_CollectionCard", deckCard);
     }
 </fieldset>
