--- a/DeckBuilderPro/Views/Shared/_Layout.cshtml
+++ b/DeckBuilderPro/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
+        <link href="http://twitter.github.io/typeahead.js/css/examples.css" rel="stylesheet" />
     </head>
     <body ng-controller="@ViewBag.Controller">
         <div class="page rounded-corners">
